Luna: Add Quick events support in Quickspace
This adds a new UI to Quickspace when events are available such as Now
Playing, Alarms, or whatever we configure as an event. This logic is
inspired by Google's event infrastructure in Smartspace but completely
written from scratch to be housed in Quickspace.

Initial events are:

- Device intro: Shows on first boot and setup
- Ambient Play (Now Playing): Shows what song is playing and tapping
the song will launch the results in Google search

QUICKEDIT, DO NOT MERGE: comment intro and ambient play due to we not having that

Change-Id: I2742c13043b816c54bc2cefdfd415f52f2e76d3f

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,8 @@
 
     <!-- QuickSpace -->
     <uses-permission android:name="com.android.providers.weather.READ_WEATHER" />
+    <!-- Ambient Indication
+    <uses-permission android:name="org.pixelexperience.ambient.play.history.MANAGE_HISTORY" /> -->
 
     <application
         android:backupAgent="com.android.launcher3.LauncherBackupAgent"
