--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,6 +57,13 @@
     <!-- Ambient Indication
     <uses-permission android:name="org.pixelexperience.ambient.play.history.MANAGE_HISTORY" /> -->
 
+    <!-- Google QSB -->
+    <permission
+        android:name="com.google.android.apps.nexuslauncher.permission.QSB"
+        android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
+        android:protectionLevel="signatureOrSystem"/>
+    <uses-permission android:name="com.google.android.apps.nexuslauncher.permission.QSB" />
+
     <application
         android:backupAgent="com.android.launcher3.LauncherBackupAgent"
         android:fullBackupOnly="true"
@@ -123,6 +130,11 @@
             android:exported="true"
             android:writePermission="com.android.launcher3.permission.WRITE_SETTINGS"
             android:readPermission="com.android.launcher3.permission.READ_SETTINGS" />
+
+        <provider
+            android:authorities="com.google.android.apps.nexuslauncher.appssearch"
+            android:exported="true"
+            android:name="com.android.launcher3.search.AppSearchProvider" />
 
     </application>
 </manifest>
